# cppPlayground

./: CMakeLists.txt  LICENSE  build.py
include/: Dummy.h  Engine.h
src/: Dummy.cpp  Engine.cpp  main.cpp
